--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,15 @@ cache/
 out/
 
 # Ignores development broadcast logs
-!/broadcast
+/broadcast/*/*/*
 /broadcast/*/31337/
 /broadcast/**/dry-run/
+
+# Include latest deployment
+!/broadcast/**/run-latest.json
 
 # Dotenv file
 .env
 
-# Working folder
+# Ignore working folder
 img_tmp
